@@ -208,8 +208,11 @@ struct ccss_node_ {
 	ccss_node_class_t const *node_class;
 };
 
-void ccss_node_init (ccss_node_t *self, ccss_node_class_t *node_class);
+void
+ccss_node_init (ccss_node_t		*self,
+		ccss_node_class_t	*node_class);
 
+// TODO move to -priv header.
 bool ccss_node_is_a (ccss_node_t const *self, char const *type_name);
 
 CCSS_END_DECLS
