@@ -133,6 +133,10 @@ struct ccss_property_base_ {
 	ccss_property_state_t		 state;
 };
 
+void
+ccss_property_init (ccss_property_base_t	*self,
+		    ccss_property_class_t const	*property_class);
+
 CCSS_END_DECLS
 
 #endif /* CCSS_PROPERTY_H */
