@@ -2,9 +2,9 @@ ccss_init
 ccss_shutdown
 ccss_add_functions
 ccss_add_properties
-ccss_cairo_init
-ccss_node_init
 ccss_block_add_property
+ccss_node_init
+ccss_property_init
 ccss_style_draw_line
 ccss_style_draw_outline
 ccss_style_draw_rectangle
@@ -21,3 +21,4 @@ ccss_stylesheet_new_from_buffer
 ccss_stylesheet_new_from_file
 ccss_stylesheet_query
 ccss_stylesheet_query_type
+ccss_cairo_init
