@@ -11,13 +11,16 @@ AM_LDFLAGS = \
 noinst_PROGRAMS = \
 	example-1 \
 	example-2 \
-	example-3
+	example-3 \
+	example-4
 
 example_1_SOURCES = example-1.c
 
 example_2_SOURCES = example-2.c
 
 example_3_SOURCES = example-3.c
+
+example_4_SOURCES = example-4.c
 
 EXTRA_DIST = \
 	example-3.png
